--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "http-proxy-middleware": "^0.19.1",
+    "jquery": "^3.3.1",
     "morgan": "^1.9.1",
-    "newrelic": "^5.6.0"
+    "newrelic": "^5.6.0",
+    "redis": "^2.8.0",
+    "request": "^2.88.0"
   }
 }
